--- a/app_server/views/blogAdd.ejs
+++ b/app_server/views/blogAdd.ejs
@@ -2,4 +2,4 @@
   <p>
     This page is currently under construction. Sorry about that.
   </p>
-  <img src='/images/underConstruction.gif' />
+  <img class='unimportant' src='/images/underConstruction.gif' />
