--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -1,6 +1,6 @@
     <h1><%= title %></h1>
     <p>
-      Welcome to <%= title %>. As someone with next to nothing
+      Welcome to my blog. As someone with next to nothing
       going on in my life right now, I have no idea why you would read this
       paragraph. Nevertheless, you have persisted. Here's another sentence.
       If only I had anything good to say here!
