--- a/app_server/views/layout.ejs
+++ b/app_server/views/layout.ejs
@@ -10,7 +10,7 @@
     <div class='navbar navbar-default navbar-static-top'>
       <div class='container'>
 	<div class='navbar-header'>
-	  <a class='navbar-brand' href='/'>Howdy</a>
+	  <a class='navbar-brand' href='/'>My Blog</a>
 	  <button class='navbar-toggle' data-toggle='collapse' data-target='#navbar-main'>
 	    <span class='icon-bar'></span>
 	    <span class='icon-bar'></span>
@@ -19,9 +19,6 @@
 	</div>
 	<div id='navbar-main' class='navbar-collapse collapse'>
 	  <ul class='nav navbar-nav'>
-	    <li>
-	      <a href='/'>My Blog</a>
-	    </li>
 	    <li>
 	      <a href='/blog/list'>List Blogs</a>
 	    </li>
@@ -37,7 +34,7 @@
       <footer>
         <div class='row'>
 	  <div class='col-xs-12'>
-	    <small> &#169; Nate Remlinger 2020</small>
+	    <small> &#169; <%= name %> 2020</small>
 	  </div>
         </div>
       </footer>
