--- a/public/bootstrap/css/bootswatch/amelia/bootstrap.css
+++ b/public/bootstrap/css/bootswatch/amelia/bootstrap.css
@@ -1,5 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Lobster|Cabin:400,700");
-
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap");
 /*!
  * Bootstrap v3.0.0
  *
@@ -302,11 +301,11 @@ html {
 }
 
 body {
-  font-family: "Cabin", Arial, sans-serif;
+  font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   line-height: 1.428571429;
   color: #ffffff;
-  background-color: #108a93;
+  background-color: #3d4a4b;
 }
 
 input,
@@ -362,7 +361,7 @@ img {
   max-width: 100%;
   padding: 4px;
   line-height: 1.428571429;
-  background-color: #108a93;
+  background-color: #3d4a4b;
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -464,7 +463,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Cabin", Arial, sans-serif;
+  font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 500;
   line-height: 1.1;
 }
@@ -1524,7 +1523,7 @@ th {
 }
 
 .table .table {
-  background-color: #108a93;
+  background-color: #3d4a4b;
 }
 
 .table-condensed thead > tr > th,
@@ -5316,7 +5315,7 @@ a.list-group-item.active > .badge,
   max-width: 100%;
   padding: 4px;
   line-height: 1.428571429;
-  background-color: #108a93;
+  background-color: #3d4a4b;
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -7231,7 +7230,7 @@ td.visible-print {
 }
 
 .navbar-brand {
-  font-family: 'Lobster', cursive;
+  font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .btn .caret {
@@ -7252,7 +7251,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lobster', cursive;
+  font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .text-primary {
@@ -7306,7 +7305,7 @@ h6 {
 }
 
 legend {
-  font-family: 'Lobster', cursive;
+  font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #fff;
 }
 
