--- a/app_server/views/layout.ejs
+++ b/app_server/views/layout.ejs
@@ -3,8 +3,9 @@
   <head>
     <title><%= title %></title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel='stylesheet' href='/bootstrap/css/bootswatch/amelia/bootstrap.css' />
+    <link rel='stylesheet' href='/bootstrap/css/amelia.bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' />
   </head>
   <body>
     <div class='navbar navbar-default navbar-static-top'>
