--- a/public/bootstrap/css/amelia.bootstrap.css
+++ b/public/bootstrap/css/amelia.bootstrap.css
@@ -376,7 +376,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #ffffff;
 }
 
 .sr-only {
