--- a/app_server/views/blogDelete.ejs
+++ b/app_server/views/blogDelete.ejs
@@ -1,5 +1,9 @@
   <h1><%= title %></h1>
-  <p>
-    This page is currently under construction. Sorry about that.
-  </p>
-  <img class='unimportant' src='/images/underConstruction.gif' />
+  <div class='container'>  
+    <form action='/blog/delete/<%= blog._id %>' method='post'>
+      <label class='control-label' for='confirm'>Are you sure you want to delete '<%= blog.blogTitle %>'?</label>
+      <br/>
+      <button id='confirm' class='btn btn-default'>Confirm</button>
+      <a href='/blog/list' class='btn btn-default'>Cancel</a>
+    </form>
+  </div>
