--- a/app_server/views/blogEdit.ejs
+++ b/app_server/views/blogEdit.ejs
@@ -1,5 +1,18 @@
   <h1><%= title %></h1>
-  <p>
-    This page is currently under construction. Sorry about that.
-  </p>
-  <img class='unimportant' src='/images/underConstruction.gif' />
+  <div class='container'>
+    <form class='form-horizontal' action='/blog/edit/<%= blog._id %>' method='post'>    
+      <div class='form-group'>
+        <label class='col-xs-10 col-sm-2 control-label' for='blogTitle'>Blog Title</label>
+        <div class='col-xs-12 col-sm-10'>
+          <input id='blogTitle' class='form-control' name='blogTitle' value='<%= blog.blogTitle %>'>
+        </div>
+      </div>
+      <div class='form-group'>
+        <label class='col-sm-2 control-label' for='blogText'>Blog Text</label>
+        <div class='col-sm-10'>
+          <textarea id='blogText' class='form-control' name='blogText' rows='5'><%= blog.blogText %></textarea>
+        </div>
+      </div>
+      <button class='btn btn-default pull-right'>Submit</button>
+    </form>
+  </div>
