Make small style change to blog display to better match input

--- a/app_server/views/blogList.ejs
+++ b/app_server/views/blogList.ejs
@@ -19,7 +19,7 @@
 	</div>
       </div>
       <div class='row'>
-        <p><%=  blogs[i].blogText %></p>
+        <p class='blogText'><%=  blogs[i].blogText %></p>
     
         <% if(i != blogs.length - 1) { %>
           <hr/>
