--- a/app_server/views/blogAdd.ejs
+++ b/app_server/views/blogAdd.ejs
@@ -13,6 +13,9 @@
 	  <textarea id='blogText' class='form-control' name='blogText' rows='5'></textarea>
 	</div>
       </div>
-      <button class='btn btn-default pull-right'>Submit</button>
+      <div class='pull-right'>
+        <button class='btn btn-default'>Submit</button>
+        <a href='/blog/list' class='btn btn-default'>Cancel</a>
+      </div>
     </form>
   </div>
