--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,64 @@ footer {
 .blogText {
     white-space: pre-wrap;
 }
+
+.left-button {
+    margin-right: 10px;
+}
+
+.game-container {
+    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.board {
+    margin: 50px 0px 25px 0px;
+    display: grid;
+    width: 300px;
+    height: 300px;
+    grid-template-columns: auto auto auto;
+}
+
+.square {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: bold;
+    border: 3px solid white;
+    transition: background 0.2s ease-in-out;
+}
+
+.player-turn-square:hover {
+    cursor: pointer;
+    background: #ad1d28;
+}
+
+#square_0,
+#square_1,
+#square_2 {
+    border-top: none;
+}
+
+#square_0,
+#square_3,
+#square_6 {
+    border-left: none;
+}
+
+#square_6,
+#square_7,
+#square_8 {
+    border-bottom: none;
+}
+
+#square_2,
+#square_5,
+#square_8 {
+    border-right: none;
+}
